# constellation

./: .gitignore  CMakeLists.txt
libraries/glad/: CMakeLists.txt
libraries/glad/include/: glad.h
libraries/glad/src/: glad.c
libraries/gsl/: CMakeLists.txt
libraries/imgui/: CMakeLists.txt
libraries/imgui/include/: imconfig.h
libraries/imgui/src/: imgui_impl_glfw_gl3.cpp  imgui_impl_sdl_gl3.cpp
libraries/json/: CMakeLists.txt  json.hpp
libraries/tinyobjloader/: CMakeLists.txt
res/: monitor.mtl
shd/: basic.frag  basic.vert  monitor.frag
src/: main.cpp
src/Foundation/: Capabilities.cpp  Component.cpp  Component.hpp  Debugger.cpp  Debugger.hpp  Systems.cpp  Systems.hpp  Universe.cpp  Universe.hpp  Wiring.cpp  Wiring.hpp
src/Foundation/Components/: CPU.cpp  CPU.hpp  Component.cpp  Component.hpp  Terminal.cpp  Terminal.hpp
src/Foundation/Infrastructure/: Capabilities.cpp  Capabilities.hpp  Infrastructure.cpp  Infrastructure.hpp  Wireless.cpp  Wireless.hpp  Wiring.cpp  Wiring.hpp
src/Foundation/Infrastructures/: Capabilities.cpp  Capabilities.hpp  Debug.cpp  Debug.hpp  Infrastructure.cpp  Infrastructure.hpp  Manual.cpp  Manual.hpp  Wireless.cpp  Wireless.hpp  Wiring.cpp  Wiring.hpp
src/Foundation/Systems/: Energy.cpp  Energy.hpp  Picture.cpp  Picture.hpp  System.cpp  System.hpp  Text.cpp  Text.hpp  Video.cpp  Video.hpp
src/Graphics/: Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Geometry.cpp  Geometry.hpp  Mesh.cpp  Mesh.hpp  OrbitControls.cpp  OrbitControls.hpp  Program.cpp  Program.hpp
src/Util/: Adapters.hpp  FunctionTraits.hpp  Parse.hpp  Random.hpp
